5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1637_2445.log
== TEST (2019-04-09 20:21:24) 
-- CODE:
esc = input("Escala da temperatura em Celsius(C) ou Fahrenheit(F) ")
val = float(input("Valor da temperatura: "))

if(esc == "C"):
	f = ((9*valor/5) + 32)
	print(round(f,2))
if(esc == "F"):
	c = 5/9*(valor - 32)
	print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = ((9*valor/5) + 32)
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:21:48) 
-- CODE:
esc = input("Escala da temperatura em Celsius(C) ou Fahrenheit(F) ")
val = float(input("Valor da temperatura: "))

if(esc.upper() == "C"):
	f = ((9*valor/5) + 32)
	print(round(f,2))
if(esc.upper == "F"):
	c = 5/9*(valor - 32)
	print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = ((9*valor/5) + 32)
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:22:32) 
-- CODE:
esc = input("Escala da temperatura em Celsius(C) ou Fahrenheit(F) ")
val = float(input("Valor da temperatura: "))

if(esc.upper() == "C"):
	f = (9*valor/5) + 32
	print(round(f,2))
if(esc.upper == "F"):
	c = 5/9*(valor - 32)
	print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = (9*valor/5) + 32
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:23:10) 
-- CODE:
esc = input("Escala da temperatura em Celsius(C) ou Fahrenheit(F) ")
val = float(input("Valor da temperatura: "))

if(esc.upper() == "C"):
	f = ((9*valor)/5) + 32
	print(round(f,2))
if(esc.upper == "F"):
	c = 5/9*(valor - 32)
	print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = ((9*valor)/5) + 32
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:23:29) 
-- CODE:
esc = input("Escala da temperatura em Celsius(C) ou Fahrenheit(F) ")
val = int(input("Valor da temperatura: "))

if(esc.upper() == "C"):
	f = ((9*valor)/5) + 32
	print(round(f,2))
if(esc.upper == "F"):
	c = 5/9*(valor - 32)
	print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = ((9*valor)/5) + 32
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:24:06) 
-- CODE:
esc = input("Escala da temperatura em Celsius(C) ou Fahrenheit(F) ")
val = int(input("Valor da temperatura: "))

if(esc.upper() == "C"):
	f = ((9*val)/5) + 32
	print(round(f,2))
if(esc.upper == "F"):
	c = 5/9*(val - 32)
	print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 20:24:14) 
-- CODE:
esc = input("Escala da temperatura em Celsius(C) ou Fahrenheit(F) ")
val = int(input("Valor da temperatura: "))

if(esc.upper() == "C"):
	f = ((9*val)/5) + 32
	print(round(f,2))
if(esc.upper == "F"):
	c = 5/9*(val - 32)
	print(round(c,2))
-- EXECUTION TIME:
0.189175
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:

-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:24:24) 
-- CODE:
esc = input("Escala da temperatura em Celsius(C) ou Fahrenheit(F) ")
val = int(input("Valor da temperatura: "))

if(esc.upper() == "C"):
	f = ((9*val)/5) + 32
	print(round(f,2))
if(esc.upper == "F"):
	c = 5/9*(val - 32)
	print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:24:45) 
-- CODE:
esc = input("Escala da temperatura em Celsius(C) ou Fahrenheit(F) ")
val = int(input("Valor da temperatura: "))

if(esc.upper() == "C"):
	f = ((9*val)/5) + 32
	print(round(f,2))
if(esc.upper == "F"):
	c = 5/9*(val - 32)
	print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:24:58) 
-- CODE:
esc = input("Escala da temperatura em Celsius(C) ou Fahrenheit(F) ")
val = int(input("Valor da temperatura: "))

if(esc.upper() == "C"):
	f = ((9*val)/5) + 32
	print(round(f,2))
if(esc.upper() == "F"):
	c = 5/9*(val - 32)
	print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 20:25:07) 
-- CODE:
esc = input("Escala da temperatura em Celsius(C) ou Fahrenheit(F) ")
val = int(input("Valor da temperatura: "))

if(esc.upper() == "C"):
	f = ((9*val)/5) + 32
	print(round(f,2))
if(esc.upper() == "F"):
	c = 5/9*(val - 32)
	print(round(c,2))
-- EXECUTION TIME:
0.143508
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
